<resources>
    <string-array name="source_text">
        <item>Auto (default)</item>
        <item>Voice Line</item>
        <item>Mic</item>
        <item>System Default</item>
        <item>VoIP</item>
        <item>Voice Recognition</item>
        <item>Camcoder</item>
        <item>System RAW</item>
    </string-array>
    <string-array name="sample_rate_text">
        <item>48 kHz</item>
        <item>44.1 kHz (CD)</item>
        <item>32 kHz</item>
        <item>22 kHz</item>
        <item>16 kHz (default)</item>
        <item>11 kHz</item>
        <item>8 kHz (telephone)</item>
    </string-array>
    <string-array name="delete_text">
        <item>Keep all recording</item>
        <item>older than day</item>
        <item>older than week</item>
        <item>older than 1 month</item>
        <item>older than 3 months</item>
        <item>older than 6 months</item>
    </string-array>
    <string-array name="format_text">
        <item>2017-02-01 09.08.01.wav</item>
        <item>20170201T090801.wav</item>
        <item>1512340435 [Phone].wav</item>
        <item>2017-02-01 09.08.01 ↓↑ [Caller ID].wav</item>
    </string-array>
    <string-array name="themes_text">
        <item>Theme White</item>
        <item>Theme Dark</item>
    </string-array>
    <string-array name="channels_text">
        <item>Mono (default)</item>
        <item>Stereo</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="call_recording">Calls Recording</string>
    <string name="no_folder_app">No folder view application installed</string>
    <string name="hold_by_call">pause (hold by call)</string>
    <string name="encoding">encoding</string>
    <string name="pause">pause</string>
    <string name="edit">edit</string>
    <string name="recording">recording</string>
    <string name="encoding_title">Encoding...</string>
    <string name="recording_title">Recording</string>
    <string name="title_header">%1$s free ~ %2$s left</string>
    <string name="open_recording_folder">Open Recording Folder</string>
    <string name="recording_list_is_empty">Recording List is Empty\n\nCheck \'Calls Recording\' to Start Recording Calls</string>
    <string name="source_default">(Default)</string>
    <string name="source_mic">(Mic)</string>
    <string name="source_line">(Voice Line)</string>
    <string name="call_recordings_support">Call Recordings support</string>
    <string name="call_recordings_support_text">Most phones do not support high-quality (phone line) call recording. To enable call recording, install open-source firmware, choose different encoding options (ogg, MediaRecorder…), different audio sources (phone line, microphone, VoIP…), or root your phone.</string>
    <string name="recordings_quality">Recordings Quality</string>
    <string name="recordings_quality_text">If your phone does not support high quality call recording, the application will try MIC call recording (you may hear only one side: your or your interlocutor).</string>
    <string name="task_managers">Task Managers</string>
    <string name="task_managers_text">If your phone has battery optimization or task managers enabled, consider disabling them to keep the application running in the background (optional)</string>
    <string name="recording_enabled">Recording enabled</string>
    <string name="recording_disabled">Recording disabled</string>
    <string name="callrecent_auto_save">Auto save in (%1$d)</string>
    <string name="calls_out">Out</string>
    <string name="calls_in">In</string>
    <string name="save_button">Save</string>
    <string name="mixer_paths_done">System mixer configured. Please reboot!</string>
    <string name="mixer_paths_failed">Unable to configure system mixer</string>
    <string name="pref_storage_title">Storage Path</string>
    <string name="pref_rate_title">Sample Rate</string>
    <string name="pref_encoding_title">Encoding</string>
    <string name="pref_encoding_summary">Output file formats (.wav, .m4a, ...)</string>
    <string name="pref_mode_title">Mode</string>
    <string name="pref_mode_summary">Recording channels</string>
    <string name="pref_delete_title">Delete Recordings</string>
    <string name="pref_nameformat_title">Name Format</string>
    <string name="pref_calldialog_title">Recent Call Dialog</string>
    <string name="pref_calldialog_summary">Show rename / favorite dialog after call ended</string>
    <string name="pref_optimization_title">Disable Battery Optimization</string>
    <string name="pref_optimization_summary">Prevent app from being removed from memory</string>
    <string name="pref_theme_title">Application Theme</string>
    <string name="pref_theme_summary">Set application theme (dark / light)</string>
    <string name="pref_mixerpaths_title">System Mixer Incall Recording</string>
    <string name="pref_mixerpaths_summary">Allow system mixer to record calls for regular apps</string>
    <string name="pref_recordings">Recordings</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_application">Application</string>
    <string name="menu_search">Search</string>
    <string name="send_survey">Send Survey</string>
    <string name="survey_know_issues">Know Issues:</string>
    <string name="survey_none">No survey\'s</string>
    <string name="survey_bad">Not working</string>
    <string name="survey_good">Working</string>
    <string name="survey_few_issues">Few issues</string>
    <string name="survey_view">View Survey\'s</string>
    <string name="survey_status">Status:</string>
    <string name="sort_by_contact_z_a">Contact Z-A</string>
    <string name="sort_by_contact_a_z">Contact A-Z</string>
    <string name="app_name">Tajr</string>
    <string name="top_sheet_behavior" translatable="false">com.greyeg.tajr.sheets.TopSheetBehavior</string>
    <string name="calc_dialog_clear">Clear</string>
    <string name="calc_dialog_cancel">Cancel</string>
    <string name="calc_dialog_ok">OK</string>
    <string name="calc_answer">Ans</string>
    <string-array name="calc_dialog_errors">
        <item>Division by zero</item>
        <item>Out of bounds</item>
        <item>Result must be positive</item>
        <item>Result must be negative</item>
    </string-array>
    <string name="slide_to_cancel">"Slide to cancel"</string>
    <string name="app_info">"A WhatsApp style audio recording view to send voice notes in chat.\nHold the Mic to record, then slide left to cancel or swipe up to Lock and record.\n\nCredit:\nVarun John\nhttps://github.com/varunjohn\nvarunjohn1990@gmail.com"</string>
    <string name="open_dialog">Open dialog</string>
    <string name="result_value">Result</string>
    <string name="result_value_none">None</string>
    <string name="calc_settings">Calculator settings</string>
    <string name="option_sign">Sign can be changed</string>
    <string name="option_sign_show_btn">Show sign button</string>
    <string name="option_answer_btn">Show answer button</string>
    <string name="option_clear_operation">Clear display on operation button click</string>
    <string name="option_show_zero">Show zero when there is no value</string>
    <string name="option_max_value">Maximum value:</string>
    <string name="option_max_int">Maximum integer digits:</string>
    <string name="option_max_frac">Maximum fractional digits:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="fontello_logo" translatable="false">&#xe8ad;</string>
    <string name="fontello_user" translatable="false">&#xe800;</string>
    <string name="material_icon_settings" translatable="false">&#xeabe;</string>
    <string name="fontello_password" translatable="false">&#xe9df;</string>
    <string name="fontello_searc" translatable="false">&#xea01;</string>
    <string name="fontello_x_mark" translatable="false">&#xe887;</string>
    <string name="material_icon_info_box" translatable="false">&#xe896;</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="text">Name</string>
    <string name="phone">Phone</string>
    <string name="email">User name</string>
    <string name="log_in">Login</string>
    <string name="logout">Logout</string>
    <string name="wati_to_log_in">Login...</string>
    <string name="Product">Product</string>
    <string name="stause">Status</string>
    <string name="client_name">Client name</string>
    <string name="client_address">Client address</string>
    <string name="client_area">Client area</string>
    <string name="client_city">Client city</string>
    <string name="client_order_phone">Client order phone</string>
    <string name="sender_name">Sender name</string>
    <string name="item_cost">Item cost</string>
    <string name="item_no">Item number</string>
    <string name="order_cost">Order cost</string>
    <string name="order_total_cost">Order total cost</string>
    <string name="shipping_retum_cost">Shipping retum cost</string>
    <string name="real_shipping_return_cost">Real shipping return cost</string>
    <string name="notes">Notes</string>
    <string name="extra_fields">Extra fields</string>
    <string name="jobe">Jobe</string>
    <string name="job">Job</string>
    <string name="monthly_income">Monthly income</string>
    <string name="national_id">National id</string>
    <string name="start_work">start work</string>
    <string name="stopWotking">Stop working</string>
    <string name="update">Update</string>
    <string name="cancel">Canel</string>
    <string name="client_feedback">Client feedback</string>
    <string name="order_type">Order type</string>
    <string name="client_busy">Client busy</string>
    <string name="client_delay">Client delay</string>
    <string name="client_cancel">Client cancel</string>
    <string name="client_noanswer">Client no answer</string>
    <string name="order_data_confirmed">Confirm order data</string>
    <string name="client_phone_error">Client phone error</string>
    <string name="submit_order">Submit the order</string>
    <string name="cancel_order">Cancel order</string>
    <string name="pause_work">Pause work</string>
    <string name="finish_work">Finish work</string>
    <string name="resume_work">Resume work</string>
    <string name="wrong_number">Wrong number</string>
    <string name="pause_work_message">Do you want do finish th work</string>
    <string name="ask_finish_work">Ask to finish work</string>
    <string name="Return">Return</string>
    <string name="move">Move To update</string>
    <string name="settings">SETTINGS</string>
    <string name="mb_move_direction">mb_move_direction</string>
    <string name="mb_movement_right">mb_movement_right</string>
    <string name="mb_movement_top">mb_movement_top</string>
    <string name="mb_movement_bottom">mb_movement_bottom</string>
    <string name="mb_offset_inner">mb_offset_inner</string>
    <string name="shipping_state">Shipping state</string>
    <string name="discount">Discount</string>
    <string name="Products">Products</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="order_id">Order id</string>
</resources>